Fix big-container height on mobile phones

--- a/styles.css
+++ b/styles.css
@@ -19,26 +19,27 @@
 }
 
 body {
-    margin: 0px;
     font-family: 'Janna', sans-serif;
 }
 
-#big-continer {
+#big-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    position: relative;
+    min-height: 100%;
+    min-width: 100%;
+    position: absolute;
     background-image: linear-gradient(to bottom right, #4CAF50, #A0B5A1);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
 }
 
 .container {
     background-color: white;
     padding: 15px;
-    margin: 20px 20px 45px 20px;
+    margin: 20px 20px 55px 20px;
     border-radius: 15px;
     max-width: 800px;
     box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.2);
